--- a/v/v8.html
+++ b/v/v8.html
@@ -200,7 +200,7 @@ button:hover { background: var(--accent); color: black; }
 
     // Master Load Function
     async function loadAllCSVs(){
-        const DATA_DIR = "./data";
+        const DATA_DIR = "../data";
         document.getElementById("csv-output").innerHTML = "";
         
         try {
