--- a/v/v7.html
+++ b/v/v7.html
@@ -107,7 +107,7 @@
     }
 
     async function loadAllCSVs(){
-        const DATA_DIR = "./data";
+        const DATA_DIR = "../data";
         document.getElementById("csv-output").innerHTML = "";
         
         try {
