--- a/v/v5.html
+++ b/v/v5.html
@@ -93,7 +93,7 @@
     }
 
     async function loadAllCSVs(){
-        const DATA_DIR = "./data";
+        const DATA_DIR = "../data";
         document.getElementById("csv-output").innerHTML = "";
         
         try {
