--- a/v/v3.html
+++ b/v/v3.html
@@ -112,7 +112,7 @@
     }
 
     async function loadAllCSVs(){
-        const DATA_DIR = "./data";
+        const DATA_DIR = "../data";
         document.getElementById("csv-output").innerHTML = "";
         
         try {
